--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ python-dotenv = "^1.0.1"
 pdf2image = "^1.17.0"
 docling-core = "^2.25.0"
 docling = "^2.7.0"
+gradio-pdf = "^0.0.22"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.1"
