:memo: Update README and sample.env

--- a/sample.env
+++ b/sample.env
@@ -1,14 +1,11 @@
-# LLM
+# Ollama
 OPENAI_BASE_URL="http://localhost:11434/v1"
+OPENAI_API_KEY="NONE"
 
-# Remote LLMaaS
-# OPENAI_BASE_URL="https://granite-3-8b-instruct-maas-apicast-production.apps.prod.rhoai.rh-aiservices-bu.com:443/v1"
+# Remote LLM
+# OPENAI_BASE_URL="http://my.vllm.api/v1" # Remove if using OpenAI
 # OPENAI_API_KEY="<KEY>"
-
-# Remote vLLM
-# OPENAI_BASE_URL="http://my.vllm.api/v1"
-# OPENAI_API_KEY="<KEY>"
-# OPENAI_IGNORE_SSL = True # Ignore SSL certificate verification if needed
+# OPENAI_IGNORE_SSL = True # Optional: Disable SSL verification for remote server
 
 # (Optional) Remote Docling Server
 # DOCLING_BASE_URL="https://docling-maas-apicast-production.apps.prod.rhoai.rh-aiservices-bu.com:443"
